fix two small (annoying problems)
From this PR: https://github.com/appsembler/edx-theme-codebase/pull/53

Issues:
- top nav in course overflowing when too many units there
- “View in Studio" button for Staff users obstructing other stuff

--- a/lms/static/sass/courseware/_course-content-01.scss
+++ b/lms/static/sass/courseware/_course-content-01.scss
@@ -377,6 +377,7 @@
               text-align: center;
               border: none;
               padding: 0 1.5rem;
+              min-width: auto;
               border-right: 0.1rem solid #ddd;
 
               &:focus {
