--- a/lms/static/sass/courseware/_courseware-wrapper-01.scss
+++ b/lms/static/sass/courseware/_courseware-wrapper-01.scss
@@ -55,6 +55,7 @@
 
     .wrap-instructor-info, .wrap-instructor-info.studio-view {
       margin: 3rem 0 -5rem;
+      margin: 3rem 0 0;
       display: block;
       top: 0;
       @include primary-font;
